<resources>
    <string name="app_name">Spirometer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_recording">Start Recording</string>
    <string name="record">Record</string>
    <string name="previous_tests">Previous Tests</string>
    <string name="ok">OK!</string>
    <string name="save_and_view_result">Save and View Result</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_age">Please Enter Age</string>
    <string name="please_enter_smoking">Please Enter Smoking</string>
    <string name="please_enter_gender">Please Enter Gender</string>
    <string name="select_sample_rate">Select Sample Rate</string>
    <string name="select_filter">Select Filter</string>
    <string name="test_results">Test Results</string>
    <string name="review_recording">Review Recording</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome!</string>
    <string name="login_info">Log into your account to backup your tests</string>
    <string name="full_name">Full Name</string>
    <string name="register_for_an_account">Register for an Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_details_below">Enter your details below.</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="or_sign_in_using">Or sign in using</string>
    <string name="google">Google</string>
    <string name="no_tests_recorded">No Tests recorded.</string>
    <string name="log_out">Log Out</string>
    <string name="backup_tests">Backup Tests</string>
    <string name="backing_up">Backing Up</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="sync_tests">Sync Tests</string>
    <string name="export_test_as_csv">Export Test as CSV</string>
    <string name="delete_test">Delete Test</string>
    <string name="export_all_tests">Export All Tests</string>
    <string name="tests_before">Tests Before</string>
    <string name="syncing">Syncing</string>
    <string name="sync_complete">Sync Complete</string>
    <string name="save">Save</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="smoke_ques">Do You Smoke?</string>
    <string name="generate_results">Generate Results</string>
    <string name="predicted_fev1_value">Predicted FEV1 Value</string>
    <string name="predicted_fvc_value">Predicted FVC Value</string>
    <string name="audio_envelope">Audio Envelope</string>
    <string name="audio_magnitude">Audio Magnitude</string>
</resources>