<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name_et_save_audio_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="12dp"
        android:hint="@string/name"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/design_default_color_error"
            app:cardCornerRadius="50dp"
            android:layout_weight="1"
            android:layout_margin="12dp"
            >

        <Button
            android:id="@+id/cancel_button_save_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/cancel"
            app:backgroundTint="@color/md_theme_dark_errorContainer"
            android:textAlignment="center"/>
        />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/design_default_color_primary"
            app:cardCornerRadius="50dp"
            android:layout_weight="1"
            android:layout_margin="12dp">

            <Button
                android:id="@+id/ok_button_save_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:text="@string/save_and_view_result"
                android:textAlignment="center"/>
            />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>