<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnalyticsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/poppins_black"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textSize="32sp"/>


    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/preview_audio_fragment_root"
        tools:layout="@layout/fragment_preview_audio" />


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout2"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="12dp"-->
<!--        android:hint="@string/select_sample_rate"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        tools:layout_editor_absoluteX="12dp">-->

<!--        <AutoCompleteTextView-->
<!--            android:id="@+id/sample_rate_exposed_dropdown"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:id="@+id/textInputLayout"-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="@string/select_filter"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"-->
<!--        android:layout_margin="12dp">-->

<!--        <AutoCompleteTextView-->
<!--            android:id="@+id/filter_exposed_dropdown"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content" />-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/analyze_audio"
        android:text="@string/generate_results"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_regular"
        android:padding="16dp"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:drawableRight="@drawable/ic_baseline_navigate_next_24"
        android:drawableTint="?attr/colorOnBackground"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:textColor="?attr/colorOnBackground"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/analytics_progress_bar"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/test_result_view"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/predicted_fvc_value"
                android:layout_weight="1"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/predicted_fvc_value"
                android:padding="4dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/predicted_fev1_value"
                android:layout_weight="1"
                android:textSize="18sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/predicted_fev1_value"
                android:padding="4dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/audio_envelope"
            android:textSize="24sp"/>

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result_graph_view"
            android:padding="4dp"/>

    </LinearLayout>

</LinearLayout>
