<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:elevation="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/topSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/welcome_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/register_for_an_account"
                    android:textSize="32sp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textFontWeight="1000"
                    android:textColor="?attr/colorPrimary"/>

                <TextView
                    android:id="@+id/welcome_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/enter_your_details_below"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_header"
                    android:textColor="@android:color/darker_gray"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/middleSection"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/topSection"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayout"
                    app:startIconTint="?attr/colorPrimary"
                    app:startIconDrawable="@drawable/ic_baseline_person_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopStart="16dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameEt"
                        android:layout_width="match_parent"
                        android:inputType="textEmailAddress"
                        android:layout_height="match_parent"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:startIconTint="?attr/colorPrimary"
                    app:startIconDrawable="@drawable/ic_baseline_mail_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/email_address"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopStart="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailET"
                        android:layout_width="match_parent"
                        android:textSize="18sp"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/passwordLayout"
                    app:startIconTint="?attr/colorPrimary"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:endIconMode="password_toggle"
                    android:hint="@string/password"
                    app:layout_constraintTop_toBottomOf="@id/emailLayout"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopStart="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/passwordET"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:paddingBottom="16dp"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="18sp"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/confirmPasswordLayout"
                    app:startIconTint="?attr/colorPrimary"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:endIconMode="password_toggle"
                    android:hint="@string/confirm_password"
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout"

                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusTopStart="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmPassEt"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:paddingBottom="16dp"
                        android:textSize="18sp"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:shadowRadius="15"
                    android:shadowDy="12"
                    android:textAllCaps="false"
                    android:layout_marginBottom="16dp"
                    android:elevation="20dp"
                    android:text="@string/register"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="24sp"
                    app:cornerRadius="16dp"
                    app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout"
                    android:layout_marginTop="24dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>