<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.UserFragment"
    android:id="@+id/scroll_view_user_frag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rootLayout"
        android:orientation="vertical"
        android:paddingTop="8dp"
        android:paddingBottom="16dp">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorSurfaceContainerHighest"
            app:cardCornerRadius="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:orientation="horizontal"
                android:id="@+id/userInfoLayout"
                android:gravity="center_vertical"
                >

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:id="@+id/displayImg"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/nameTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Anonymous User"
                        android:textSize="20sp"
                        android:textColor="?attr/colorOnBackground"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/phoneNumTxt"
                        android:text="+91 XXXXX XXXXX"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="?attr/colorOnBackground"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUpTxt"
                        android:text="Sign Up"
                        android:textSize="16sp"
                        android:fontFamily="@font/poppins_regular"
                        android:textColor="?attr/colorOnBackground"
                        />

                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical">


            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/backup_tests"
                android:text="@string/sync_tests"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:padding="16dp"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:textColor="?attr/colorOnBackground"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/export_all_tests"
                android:text="@string/export_all_tests"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:padding="16dp"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:textColor="?attr/colorOnBackground"

                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logOutBtn"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:fontFamily="@font/poppins_regular"
                android:padding="16dp"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:drawableRight="@drawable/ic_baseline_navigate_next_24"
                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:textColor="?attr/colorOnBackground"
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
